--- a/package.json
+++ b/package.json
@@ -67,5 +67,8 @@
 		"vitest": "^4.0.5",
 		"vitest-browser-svelte": "^2.0.1",
 		"zod": "^3.25.76"
+	},
+	"dependencies": {
+		"svelte-gauge": "^2.0.1"
 	}
 }
